fix (flcikering): the doc_side generates a flicker while using. Adding a small timer and using the cache helps to fix it.
Also added st cache to the main and the reranker. The streamlit
behaviour rerender the reranker and the load_index, now it only existins
in the st.session_state

--- a/app/frontend/components/doc_sidebar/styles.css
+++ b/app/frontend/components/doc_sidebar/styles.css
@@ -8,10 +8,9 @@
     height: 100%;
 }
 .uploader-container {
-    padding: 1rem;
+    padding: 2rem;
 }
 [data-testid="stSidebar"] [data-testid="stFileUploaderDropzone"] {
-    border-radius: 20px !important;
     background-color: #1f1f1e !important;
 }
 .st-key-uploader {
